# mpdao-vote-contracts

./: .gitignore  Cargo.toml  README.md  tsconfig.json
kv-store-contract/: Cargo.toml
kv-store-contract/src/: lib.rs
kv-user-store-contract/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
kv-user-store-contract/src/: lib.rs
meta-vote-contract/: Cargo.toml
meta-vote-contract/src/: buy_and_lock.rs  constants.rs  deposit.rs  evm_delegate.rs  interface.rs  internal.rs  lib.rs  locking_position.rs  migrate.rs  timestamp_utils.rs  types.rs  utils.rs  view.rs  voter.rs  withdraw.rs
meta-vote-contract/src/tests/: mod.rs  utils.rs
mpip-contract/: Cargo.toml
mpip-contract/src/: constants.rs  interface.rs  internal.rs  lib.rs  mpip.rs  types.rs  vote.rs  vote_counting.rs  voter.rs
near-workspaces-integration-test/: Cargo.toml
near-workspaces-integration-test/src/: main.rs
scripts/: build-mpdao-vote.sh  build.sh  compile.sh  integration-test.sh
scripts/mainnet/: adjust-voter-voting-power.sh  backup-wasm.sh  controlled-transfer-mpdao.sh  declare_get_mpdao_balance.sh  delegate-voting-power.sh  lock-in-votes.sh  redeploy_and_migrate_meta_vote.sh  reset-user-migration.sh  transfer-extra-balance.sh  try-call-pub-crate.sh  update_mpdao_avail_to_sell.sh  vesting_bond_for_others.sh  view.sh
scripts/testnet/: adjust-voter-voting-power.sh  delegate-voting-power.sh  deploy_init_MPIP.sh  deploy_init_meta_vote.sh  mpip-set-voting-period.sh  redeploy_and_migrate_meta_vote.sh  redeploy_only_MPIP.sh  redeploy_only_meta_vote.sh  testnet-set-vars.sh  transfer-extra-balance.sh  update_mpdao_avail_to_sell.sh  update_mpdao_per_near.sh  vesting_bond_for_others.sh  view.sh
test-meta-token/: Cargo.toml  README.md
test-meta-token/src/: lib.rs
