[workspace]
members = [
    "meta-vote-contract",
    "kv-store-contract",
    "mpip-contract",
    "test-meta-token",
    "near-workspaces-integration-test"
]
resolver = "2"

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1.git" }

[workspace.dependencies]
schemars = { version = "0.8.16", features = ["derive"] }
schemars_derive = "0.8.16"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
