[package]
name = "meta-vote-contract"
version = "2.0.0"
edition = "2021"
authors = ["metapool.app <hello@metapool.app>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.15.1", default-features = false, features = ["legacy"] }
near-contract-standards = { version = "5.15.1", default-features = false }
uint = "0.9.3"
schemars = { version = "0.8.16", features = ["derive"] }
near-abi = "0.1.0-pre.0"
serde = { version = "1.0", features = ["derive"] }
