[package]
name = "test-meta-token"
version = "0.1.2"
edition = "2018"
authors = ["metapool.app <hello@metapoool.app>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
uint = "0.9.3"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
